--- a/data/qids/Q179374/newspaper/full-manifest.json
+++ b/data/qids/Q179374/newspaper/full-manifest.json
@@ -1,15 +1,15 @@
 {
     "@context": "http:\/\/iiif.io\/api\/presentation\/3\/context.json",
-    "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q179374\/manifest.json",
+    "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q179374\/newspaper\/full-manifest.json",
     "type": "Collection",
     "label": {
         "en": [
-            "Collections for Robert Owen"
+            "Newspaper"
         ]
     },
     "summary": {
         "en": [
-            "Collection Summary for Robert Owen"
+            "Collection of Newspaper"
         ]
     },
     "requiredStatement": {
@@ -26,20 +26,20 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q179374\/newspaper\/manifest.json",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q179374\/newspaper\/full-4518263-modsarticle29-4518268-1.json",
             "type": "Collection",
             "label": {
                 "en": [
-                    "Newspaper articles"
+                    "1883-09-15"
                 ]
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q179374\/journal\/manifest.json",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q179374\/newspaper\/full-4448313-modsarticle45-4448318-1.json",
             "type": "Collection",
             "label": {
                 "en": [
-                    "Journal articles"
+                    "1865-12-16"
                 ]
             }
         }
