--- a/data/qids/Q179374/full-manifest.json
+++ b/data/qids/Q179374/full-manifest.json
@@ -35,7 +35,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q179374\/journal\/full-manifest.json",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q179374\/journal\/manifest.json",
             "type": "Collection",
             "label": {
                 "en": [
