--- a/data/qids/Q179374/newspaper/full-manifest.json
+++ b/data/qids/Q179374/newspaper/full-manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q179374\/newspaper\/full-4518263-modsarticle29-4518268-1.json",
-            "type": "Collection",
+            "type": "Manifest",
             "label": {
                 "en": [
                     "1883-09-15"
@@ -36,7 +36,7 @@
         },
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q179374\/newspaper\/full-4448313-modsarticle45-4448318-1.json",
-            "type": "Collection",
+            "type": "Manifest",
             "label": {
                 "en": [
                     "1865-12-16"
