--- a/data/qids/Q179374/newspaper/manifest.json
+++ b/data/qids/Q179374/newspaper/manifest.json
@@ -35,8 +35,8 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q179374\/Manifest\/4448313-modsarticle45-4448318-1.json",
-            "type": "Collection",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q179374\/newspaper\/4448313-modsarticle45-4448318-1.json",
+            "type": "Manifest",
             "label": {
                 "en": [
                     "1865-12-16"
