--- a/data/qids/Q16845399/full-manifest.json
+++ b/data/qids/Q16845399/full-manifest.json
@@ -43,5 +43,15 @@
                 ]
             }
         }
-    ]
+    ],
+    "personDescription": {
+        "en": [
+            "British painter"
+        ]
+    },
+    "personImage": {
+        "en": [
+            "https:\/\/upload.wikimedia.org\/wikipedia\/commons\/6\/6f\/Hugh_Hughes.jpg"
+        ]
+    }
 }
