--- a/data/qids/Q6450928/full-manifest.json
+++ b/data/qids/Q6450928/full-manifest.json
@@ -43,5 +43,15 @@
                 ]
             }
         }
-    ]
+    ],
+    "personDescription": {
+        "en": [
+            "Welsh landscape painter (1918-2006)"
+        ]
+    },
+    "personImage": {
+        "en": [
+            "https:\/\/upload.wikimedia.org\/wikipedia\/commons\/e\/e8\/Cerflun_Kyffin_Williams_statue.jpg"
+        ]
+    }
 }
