--- a/data/qids/Q7199739/full-manifest.json
+++ b/data/qids/Q7199739/full-manifest.json
@@ -34,5 +34,15 @@
                 ]
             }
         }
-    ]
+    ],
+    "personDescription": {
+        "en": [
+            "Australian artist (1903-1991)"
+        ]
+    },
+    "personImage": {
+        "en": [
+            ""
+        ]
+    }
 }
