--- a/data/qids/Q1886336/manifest.json
+++ b/data/qids/Q1886336/manifest.json
@@ -43,5 +43,15 @@
                 ]
             }
         }
-    ]
+    ],
+    "personDescription": {
+        "en": [
+            "British painter known for cityscapes"
+        ]
+    },
+    "personImage": {
+        "en": [
+            "https:\/\/upload.wikimedia.org\/wikipedia\/commons\/2\/25\/Ben_Johnson_Liverpool.JPG"
+        ]
+    }
 }
