--- a/data/qids/Q20054436/manifest.json
+++ b/data/qids/Q20054436/manifest.json
@@ -34,5 +34,15 @@
                 ]
             }
         }
-    ]
+    ],
+    "personDescription": {
+        "en": [
+            "Welsh artist"
+        ]
+    },
+    "personImage": {
+        "en": [
+            ""
+        ]
+    }
 }
