--- a/data/qids/Q20631844/full-manifest.json
+++ b/data/qids/Q20631844/full-manifest.json
@@ -43,5 +43,15 @@
                 ]
             }
         }
-    ]
+    ],
+    "personDescription": {
+        "en": [
+            "Welsh architect"
+        ]
+    },
+    "personImage": {
+        "en": [
+            ""
+        ]
+    }
 }
