--- a/data/qids/Q21455263/manifest.json
+++ b/data/qids/Q21455263/manifest.json
@@ -34,5 +34,15 @@
                 ]
             }
         }
-    ]
+    ],
+    "personDescription": {
+        "en": [
+            "British painter (1868-1943)"
+        ]
+    },
+    "personImage": {
+        "en": [
+            ""
+        ]
+    }
 }
