--- a/data/qids/Q449054/manifest.json
+++ b/data/qids/Q449054/manifest.json
@@ -34,5 +34,15 @@
                 ]
             }
         }
-    ]
+    ],
+    "personDescription": {
+        "en": [
+            "Welsh painter (1890\u20131956)"
+        ]
+    },
+    "personImage": {
+        "en": [
+            "https:\/\/upload.wikimedia.org\/wikipedia\/commons\/0\/00\/Nina_Hamnett.jpg"
+        ]
+    }
 }
