--- a/data/qids/Q4722948/manifest.json
+++ b/data/qids/Q4722948/manifest.json
@@ -43,5 +43,15 @@
                 ]
             }
         }
-    ]
+    ],
+    "personDescription": {
+        "en": [
+            "painter (1911-1999)"
+        ]
+    },
+    "personImage": {
+        "en": [
+            ""
+        ]
+    }
 }
