--- a/data/qids/Q4758799/manifest.json
+++ b/data/qids/Q4758799/manifest.json
@@ -34,5 +34,15 @@
                 ]
             }
         }
-    ]
+    ],
+    "personDescription": {
+        "en": [
+            "Welsh painter (1938-2016)"
+        ]
+    },
+    "personImage": {
+        "en": [
+            "https:\/\/upload.wikimedia.org\/wikipedia\/commons\/7\/78\/Andrew_Vicari_at_the_Celtic_Manor_%28cropped%29.jpg"
+        ]
+    }
 }
