--- a/data/qids/Q5113432/manifest.json
+++ b/data/qids/Q5113432/manifest.json
@@ -43,5 +43,15 @@
                 ]
             }
         }
-    ]
+    ],
+    "personDescription": {
+        "en": [
+            "Welsh artist (1873-1934)"
+        ]
+    },
+    "personImage": {
+        "en": [
+            "https:\/\/upload.wikimedia.org\/wikipedia\/commons\/b\/b4\/Self_Portrait_%28gcf02743%29.jpg"
+        ]
+    }
 }
